About overflow fix

--- a/style.css
+++ b/style.css
@@ -432,6 +432,7 @@ padding: 1px;
   max-width: 1600px;
   min-width: 100px;
   flex-wrap: wrap; /* utile pour petit écran */
+  overflow-x: hidden;
 }
 
 .profile-pic {
